--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nuxt"
   },
   "dependencies": {
-    "nuxt": "^2.4.5"
+    "nuxt": "^2.4.5",
+    "storyblok-nuxt": "^1.0.1"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.4.5"
